# primetype.github.io

./: .gitignore  .travis.yml  404.html  50x.html  CNAME  LICENSE  blog.html  config.toml  index.html  make_cv_pdf.sh  primetype.cabal  resume.md  robots.txt  sample.html  script.hs  search_index.en.js  site.hs  sitemap.xml  stack.yaml  style.css
.github/workflows/: zola.yml
about/: index.html
assets/: syntax.css
assets/images/: hashes.json
assets/mobirise/css/: mbr-additional.css
assets/theme/js/: script.js
blog/: index.html
blog/cardano-wallet/: index.html
blog/haskell-foundation-check/: index.html
blog/haskell-nat/: index.html
blog/rust-js-binding/: index.html
blog/sharesafe/: index.html
blog/yet-another-error-handling/: index.html
blog/yet-another-error-handling-2/: index.html
content/: about.md  reclame.md  reclame_2.md
content/blog/: cardano-wallet.md  haskell-foundation-check.md  haskell-nat.md  rust-js-binding.md  sharesafe.md  yet-another-error-handling-2.md  yet-another-error-handling.md
posts/: 2016-06-11-yet-another-error-handling.md  2016-06-29-yet-another-error-handling.md  2017-03-15-haskell-nat.md  2017-11-30-haskell-foundation-check.md  2017-12-03-sharesafe.md
reclame/: index.html
sass/: style.scss
static/: keybase.txt
templates/: blog-layout.html  blog.html  default-layout.html  index.html  page.html  resume-layout.html
